# libdeflater

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  build.rs
bench_data/: README.md
benches/: benchmarks.rs  custom-benches.toml  custom_benches.rs
examples/: gz_compress.rs  gz_decompress.rs
libdeflate-sys/: Cargo.toml  README.md  build.rs
libdeflate-sys/src/: bindings.rs  lib.rs
scripts/: generate_bindgen.sh  process-bench.rb
src/: lib.rs  libdeflate_sys.rs  malloc_wrapper.rs  wrapper.h
tests/: hello.deflate  hello.zz  integration_test.rs
