[package]
name = "libdeflater"
version = "0.1.2"
authors = ["Adam Kewley <contact@adamkewley.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
keywords = ["gzip", "zlib", "deflate", "encoding"]
categories = ["compression", "api-bindings"]
repository = "https://github.com/adamkewley/libdeflater"
homepage = "https://github.com/adamkewley/libdeflater"
description = """
Bindings to libdeflate for DEFLATE (de)compression exposed as non-streaming buffer
operations. Contains bindings for raw deflate, zlib, and gzip data.
"""
build = "build.rs"

[build-dependencies]
cc = "1.0"

[dev-dependencies]
criterion = "0.3"
flate2 = "1.0.11"
serde = { version = "1.0.101", features = ["derive"] }
toml = "0.5.3"

[[bench]]
name = "benchmarks"
harness = false
