[package]
name = "libdeflate-sys"
version = "0.6.0"
authors = ["Adam Kewley <contact@adamkewley.com>"]
links = "libdeflate"
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
keywords = ["gzip", "zlib", "deflate", "encoding"]
categories = ["compression", "api-bindings"]
repository = "https://github.com/adamkewley/libdeflater"
homepage = "https://github.com/adamkewley/libdeflater"
description = """
Bindings to libdeflate for DEFLATE (de)compression exposed as non-streaming buffer
operations. Contains bindings for raw deflate, zlib, and gzip data.
"""
build = "build.rs"

[build-dependencies]
cc = "1.0"

[features]
freestanding = []
